tests/test_assets/semantic/valid/expressions/known_nonzero_divisor.cog
ONE :: 1;

test_known_nonzero_divisor::(
    integer: i32
) -> void {
    integer / 1;
    integer % 1;

    integer / ONE;
    integer % ONE;

    integer / cast(i32, 1);
    integer % cast(i32, 1);

    integer / (2 - 1);
    integer % (2 - 1);

    integer /= 1;
    integer %= 1;

    integer /= ONE;
    integer %= ONE;

    integer /= cast(i32, 1);
    integer %= cast(i32, 1);

    integer /= (2 - 1);
    integer %= (2 - 1);
}
