tests/test_assets/semantic/invalid/void_values/cast_source.cog
does_nothing::() -> void {
}

test::() -> void {
    value := cast(i32, does_nothing());
}